src/generated_files/ipdrawParser.py
# Generated from ipdraw.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ipdrawParser ( Parser ):

    grammarFileName = "ipdraw.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'if'", "'('", "')'", "'{'", "'}'", 
                     "'else'", "'while'", "'until'", "'for'", "'finally'", 
                     "'\\u00AC'", "'!'", "'not'", "'=='", "'eq'", "'!='", 
                     "'neq'", "'<'", "'lt'", "'>'", "'gt'", "'<='", "'lte'", 
                     "'>='", "'gte'", "'&&'", "'and'", "'||'", "'or'", "'='", 
                     "'stdin'", "'pause'", "'->'", "'stdout'", "'stderr'", 
                     "'/'", "'//'", "'*'", "'%'", "'+'", "'-'", "'^'", "','", 
                     "'\\u00BA'", "'deg'", "'rad'", "'left'", "'right'", 
                     "'forward'", "'backward'", "'down'", "'up'", "'color'", 
                     "'position'", "'orientation'", "'thickness'", "'pressure'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Type", "INT", 
                      "FLOAT", "BOOL", "Word", "Name", "HexaColor", "ESC", 
                      "STRING", "Comment", "WS" ]

    RULE_main = 0
    RULE_statement = 1
    RULE_ifStatement = 2
    RULE_elseBlock = 3
    RULE_whileLoop = 4
    RULE_forLoop = 5
    RULE_finallyBlock = 6
    RULE_condition = 7
    RULE_instruction = 8
    RULE_assignment = 9
    RULE_stdin = 10
    RULE_pause = 11
    RULE_print = 12
    RULE_variable = 13
    RULE_expression = 14
    RULE_tuple = 15
    RULE_angle = 16
    RULE_rotateAction = 17
    RULE_moveAction = 18
    RULE_penAction = 19
    RULE_arrowProps = 20
    RULE_typeCast = 21

    ruleNames =  [ "main", "statement", "ifStatement", "elseBlock", "whileLoop", 
                   "forLoop", "finallyBlock", "condition", "instruction", 
                   "assignment", "stdin", "pause", "print", "variable", 
                   "expression", "tuple", "angle", "rotateAction", "moveAction", 
                   "penAction", "arrowProps", "typeCast" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    Type=59
    INT=60
    FLOAT=61
    BOOL=62
    Word=63
    Name=64
    HexaColor=65
    ESC=66
    STRING=67
    Comment=68
    WS=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ipdrawParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatementContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatementContext,i)


        def getRuleIndex(self):
            return ipdrawParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = ipdrawParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -274865022040308) != 0) or _la==64 or _la==67:
                self.state = 44
                self.statement()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(ipdrawParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self):
            return self.getTypedRuleContext(ipdrawParser.InstructionContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ipdrawParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(ipdrawParser.IfStatementContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(ipdrawParser.WhileLoopContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(ipdrawParser.ForLoopContext,0)


        def print_(self):
            return self.getTypedRuleContext(ipdrawParser.PrintContext,0)


        def stdin(self):
            return self.getTypedRuleContext(ipdrawParser.StdinContext,0)


        def pause(self):
            return self.getTypedRuleContext(ipdrawParser.PauseContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ipdrawParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 52
                self.instruction()
                pass

            elif la_ == 2:
                self.state = 53
                self.assignment()
                pass

            elif la_ == 3:
                self.state = 54
                self.ifStatement()
                pass

            elif la_ == 4:
                self.state = 55
                self.whileLoop()
                pass

            elif la_ == 5:
                self.state = 56
                self.forLoop()
                pass

            elif la_ == 6:
                self.state = 57
                self.print_()
                pass

            elif la_ == 7:
                self.state = 58
                self.stdin()
                pass

            elif la_ == 8:
                self.state = 59
                self.pause()
                pass


            self.state = 62
            self.match(ipdrawParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ipdrawParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatementContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatementContext,i)


        def elseBlock(self):
            return self.getTypedRuleContext(ipdrawParser.ElseBlockContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = ipdrawParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(ipdrawParser.T__1)
            self.state = 65
            self.match(ipdrawParser.T__2)
            self.state = 66
            self.condition()
            self.state = 67
            self.match(ipdrawParser.T__3)
            self.state = 68
            self.match(ipdrawParser.T__4)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -274865022040308) != 0) or _la==64 or _la==67:
                self.state = 69
                self.statement()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(ipdrawParser.T__5)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 76
                self.elseBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatementContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatementContext,i)


        def getRuleIndex(self):
            return ipdrawParser.RULE_elseBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseBlock" ):
                listener.enterElseBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseBlock" ):
                listener.exitElseBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseBlock" ):
                return visitor.visitElseBlock(self)
            else:
                return visitor.visitChildren(self)




    def elseBlock(self):

        localctx = ipdrawParser.ElseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_elseBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(ipdrawParser.T__6)
            self.state = 80
            self.match(ipdrawParser.T__4)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -274865022040308) != 0) or _la==64 or _la==67:
                self.state = 81
                self.statement()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(ipdrawParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cicle = None # Token

        def condition(self):
            return self.getTypedRuleContext(ipdrawParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatementContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatementContext,i)


        def getRuleIndex(self):
            return ipdrawParser.RULE_whileLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileLoop" ):
                return visitor.visitWhileLoop(self)
            else:
                return visitor.visitChildren(self)




    def whileLoop(self):

        localctx = ipdrawParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whileLoop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            localctx.cicle = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                localctx.cicle = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 90
            self.match(ipdrawParser.T__2)
            self.state = 91
            self.condition()
            self.state = 92
            self.match(ipdrawParser.T__3)
            self.state = 93
            self.match(ipdrawParser.T__4)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -274865022040308) != 0) or _la==64 or _la==67:
                self.state = 94
                self.statement()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(ipdrawParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.AssignmentContext,i)


        def condition(self):
            return self.getTypedRuleContext(ipdrawParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatementContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatementContext,i)


        def finallyBlock(self):
            return self.getTypedRuleContext(ipdrawParser.FinallyBlockContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoop" ):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = ipdrawParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forLoop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ipdrawParser.T__9)
            self.state = 103
            self.match(ipdrawParser.T__2)
            self.state = 104
            self.assignment()
            self.state = 105
            self.match(ipdrawParser.T__0)
            self.state = 106
            self.condition()
            self.state = 107
            self.match(ipdrawParser.T__0)
            self.state = 108
            self.assignment()
            self.state = 109
            self.match(ipdrawParser.T__3)
            self.state = 110
            self.match(ipdrawParser.T__4)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -274865022040308) != 0) or _la==64 or _la==67:
                self.state = 111
                self.statement()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(ipdrawParser.T__5)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 118
                self.finallyBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FinallyBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatementContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatementContext,i)


        def getRuleIndex(self):
            return ipdrawParser.RULE_finallyBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFinallyBlock" ):
                listener.enterFinallyBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFinallyBlock" ):
                listener.exitFinallyBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFinallyBlock" ):
                return visitor.visitFinallyBlock(self)
            else:
                return visitor.visitChildren(self)




    def finallyBlock(self):

        localctx = ipdrawParser.FinallyBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_finallyBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(ipdrawParser.T__10)
            self.state = 122
            self.match(ipdrawParser.T__4)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -274865022040308) != 0) or _la==64 or _la==67:
                self.state = 123
                self.statement()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(ipdrawParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ipdrawParser.RULE_condition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConditionGreaterThanContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionGreaterThan" ):
                listener.enterConditionGreaterThan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionGreaterThan" ):
                listener.exitConditionGreaterThan(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionGreaterThan" ):
                return visitor.visitConditionGreaterThan(self)
            else:
                return visitor.visitChildren(self)


    class ConditionAndContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionAnd" ):
                listener.enterConditionAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionAnd" ):
                listener.exitConditionAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionAnd" ):
                return visitor.visitConditionAnd(self)
            else:
                return visitor.visitChildren(self)


    class ConditionOrContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionOr" ):
                listener.enterConditionOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionOr" ):
                listener.exitConditionOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionOr" ):
                return visitor.visitConditionOr(self)
            else:
                return visitor.visitChildren(self)


    class ConditionNotContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condition(self):
            return self.getTypedRuleContext(ipdrawParser.ConditionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionNot" ):
                listener.enterConditionNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionNot" ):
                listener.exitConditionNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionNot" ):
                return visitor.visitConditionNot(self)
            else:
                return visitor.visitChildren(self)


    class ConditionLessThanContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionLessThan" ):
                listener.enterConditionLessThan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionLessThan" ):
                listener.exitConditionLessThan(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionLessThan" ):
                return visitor.visitConditionLessThan(self)
            else:
                return visitor.visitChildren(self)


    class ConditionEqualsContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionEquals" ):
                listener.enterConditionEquals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionEquals" ):
                listener.exitConditionEquals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionEquals" ):
                return visitor.visitConditionEquals(self)
            else:
                return visitor.visitChildren(self)


    class ConditionLessEqualContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionLessEqual" ):
                listener.enterConditionLessEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionLessEqual" ):
                listener.exitConditionLessEqual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionLessEqual" ):
                return visitor.visitConditionLessEqual(self)
            else:
                return visitor.visitChildren(self)


    class ConditionNotEqualsContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionNotEquals" ):
                listener.enterConditionNotEquals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionNotEquals" ):
                listener.exitConditionNotEquals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionNotEquals" ):
                return visitor.visitConditionNotEquals(self)
            else:
                return visitor.visitChildren(self)


    class ConditionGreaterEqualContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionGreaterEqual" ):
                listener.enterConditionGreaterEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionGreaterEqual" ):
                listener.exitConditionGreaterEqual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionGreaterEqual" ):
                return visitor.visitConditionGreaterEqual(self)
            else:
                return visitor.visitChildren(self)


    class ConditionParenthesesContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condition(self):
            return self.getTypedRuleContext(ipdrawParser.ConditionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionParentheses" ):
                listener.enterConditionParentheses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionParentheses" ):
                listener.exitConditionParentheses(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionParentheses" ):
                return visitor.visitConditionParentheses(self)
            else:
                return visitor.visitChildren(self)



    def condition(self):
